--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ p+p {
 }
 
 a {
-    color: #00F;
+    color: blue;
     text-decoration: none;
     transition: .2s all ease;
 }
@@ -330,8 +330,18 @@ a:active {
 }
 
 .cd-top {
-    background-color: #fb10ff;
-    border-radius: 50%;
+    position: relative;
+    z-index: 5;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: inline-block;
+    padding: 0.35em;
+    margin: 0.6em 0.1em 0 0.2em;
+    border: none;
+    border-radius: 0.3em;
+    cursor: pointer;
+    background-color: black;
+    color: white;
 }
 
 .cd-top--is-visible {
