--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,7 @@
     justify-items: center;
     margin: var(--fluid-type-size);
     pointer-events: none;
+    padding-top: calc(2em + 24px);
 }
 
 .log {
