--- a/assets/css/bigfoot-default.css
+++ b/assets/css/bigfoot-default.css
@@ -1,6 +1,5 @@
 .bigfoot-footnote__button {
     position: relative;
-    z-index: 5;
     top: -0.1em;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -8,7 +7,7 @@
     padding: 0.35em;
     margin: 0 0.1em 0 0.2em;
     border: none;
-    border-radius: 0.3em;
+    /*border-radius: 0.3em;*/
     cursor: pointer;
     background-color: black;
     -webkit-backface-visibility: hidden;
@@ -88,8 +87,8 @@
     margin: 1.96924em 0;
     background: none;
     opacity: 0;
-    border-radius: 0.5em;
-    border: 1px solid black;
+    /*border-radius: 0.5em;
+    border: 1px solid #007bff;*/
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     line-height: 0;
     -webkit-transition-property: opacity, -webkit-transform;
@@ -150,7 +149,7 @@
 
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__wrapper,
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__content {
-    border-radius: 0;
+    /*border-radius: 0;*/
 }
 
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__tooltip {
@@ -188,7 +187,7 @@
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:before {
     top: -1px;
     height: 1.1em;
-    border-radius: 0.5em 0.5em 0 0;
+    /*border-radius: 0.5em 0.5em 0 0;*/
     background-image: -webkit-linear-gradient(top, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
     background-image: linear-gradient(to bottom, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
 }
@@ -196,7 +195,7 @@
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:after {
     bottom: -1px;
     height: 1.2em;
-    border-radius: 0 0 0.5em 0.5em;
+    /*border-radius: 0 0 0.5em 0.5em;*/
     background-image: -webkit-linear-gradient(bottom, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
     background-image: linear-gradient(to top, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
 }
@@ -220,14 +219,15 @@
     box-sizing: inherit;
     overflow: hidden;
     margin: 0;
-    background-color: #fafafa;
-    border-radius: 0.5em;
+    /*box-shadow: 1px 1px 6px rgb(125, 122, 122), 0 0 30px lightgrey, 0 0 10px grey;
+    border-radius: 0.5em;*/
     line-height: 0;
 }
 
 .bigfoot-footnote__content {
     position: relative;
     z-index: 8;
+    margin: 0;
     display: inline-block;
     max-height: 15em;
     padding: 1.1em;
@@ -235,7 +235,7 @@
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     background: #fafafa;
-    border-radius: 0.5em;
+    /*border-radius: 0.5em;*/
     -webkit-font-smoothing: subpixel-antialiased;
     line-height: normal;
     font-size: 0.8em;
@@ -264,7 +264,7 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     background: #fafafa;
-    border: 1px solid #c3c3c3;
+    border: 1px solid transparent;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     border-top-left-radius: 0;
 }
