--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,13 +105,13 @@ a:active {
 .menu-wrapper {
     position: absolute;
     /* padding-right: 16px; */
-    /* padding: 8px 0; */
+    padding: 8px 0;
     width: 100%;
     background: none;
     left: 0;
     /* height: 70px; */
     transition: .2s all ease;
-    background-image: linear-gradient(white, transparent);
+    background-image: linear-gradient(black, transparent);
     mix-blend-mode: difference;
     ;
 }
