--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,10 @@ html {
     /* word-wrap: break-word;*/
 }
 
+.Home {
+    margin: 0;
+}
+
 h1,
 h2,
 h3,
@@ -58,7 +62,6 @@ h6 {
 
 p {
     font-weight: 900;
-    /*text-indent: 4em;*/
     padding: 0;
     margin: 0;
 }
@@ -82,7 +85,7 @@ p+p {
 }
 
 a {
-    color: lightblue;
+    color: black;
     text-decoration: none;
     transition: .2s all ease;
 }
@@ -104,16 +107,13 @@ a:active {
 
 .menu-wrapper {
     position: absolute;
-    /* padding-right: 16px; */
-    padding: 8px 0;
     width: 100%;
     background: none;
     left: 0;
-    /* height: 70px; */
+    height: 50px;
     transition: .2s all ease;
-    background-image: linear-gradient(black, transparent);
-    mix-blend-mode: difference;
-    ;
+    background-image: linear-gradient(white, transparent);
+    mix-blend-mode: screen;
 }
 
 .menu-wrapper-fixed {
@@ -122,27 +122,9 @@ a:active {
     z-index: 100;
     /* offset */
     top: 0;
-    /* background: #fff; */
     margin-top: 0;
-    /* height: 50px; */
+    height: 50px;
     transition: .2s all ease;
-}
-
-.menu-wrapper-fixed .menu li {
-    padding-bottom: 6px;
-}
-
-.menu-wrapper-fixed .menu li.current a {
-    color: black;
-    font-weight: 700;
-}
-
-.menu-wrapper-fixed .menu li a {
-    color: black;
-}
-
-.menu-wrapper-fixed .menu li a:hover {
-    color: black;
 }
 
 .menu {
@@ -163,16 +145,8 @@ a:active {
 }
 
 .logo-head {
-    color: black;
     float: left;
     white-space: nowrap;
-}
-
-.logo-head img {
-    position: relative !important;
-    max-width: 100% !important;
-    max-height: 24px;
-    margin: 0;
 }
 
 .logo-dark {
@@ -395,8 +369,8 @@ blockquote p {
         display: block;
     }
     .ham-icon>div {
-        font-size: 2.5em;
-        /*color: #a1a721;*/
+        font-size: 2.3em;
+        color: black;
     }
     .ham-icon.open {
         background-image: linear-gradient(white, white);
