--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -397,7 +397,7 @@ blockquote p {
     }
     .ham-icon>div {
         font-size: 2.3em;
-        /*color: #a1a721;*/
+        color: #25282b;
     }
     .ham-icon.open {
         background-image: linear-gradient(white, white);
