--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,8 +35,6 @@ html {
     font-size: calc(1em + .6vw);
     line-height: 1.1;
     font-weight: 200;
-    /* word-break: break-word;*/
-    /* word-wrap: break-word;*/
 }
 
 h1,
@@ -49,6 +47,7 @@ h6 {
 }
 
 .h1 {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
 
@@ -67,7 +66,7 @@ p+p {
 }
 
 ::selection {
-    background: #007bff;
+    background: black;
     color: #fff;
 }
 
@@ -107,20 +106,20 @@ a:active {
     background: none;
     left: 0;
     /* height: 70px; */
+    /* background-color: white; */
     transition: .2s all ease;
-    background-image: linear-gradient(white, transparent);
-    mix-blend-mode: difference;
 }
 
 .menu-wrapper-fixed {
     transition: .2s all ease;
     position: fixed;
     z-index: 100;
+    height: 60px;
     /* offset */
     top: 0;
-    /* background: #fff; */
+    background-image: linear-gradient(white, transparent);
+    mix-blend-mode: difference;
     margin-top: 0;
-    /* height: 50px; */
     transition: .2s all ease;
 }
 
@@ -314,10 +313,6 @@ a:active {
     transform: translateY(-110%);
 }
 
-.main {
-    padding: 8px 0;
-}
-
 p {
     margin-top: 0;
     margin-bottom: 0;
@@ -397,7 +392,7 @@ blockquote p {
     }
     .ham-icon>div {
         font-size: 2.3em;
-        color: #25282b;
+        color: black;
     }
     .ham-icon.open {
         background-image: linear-gradient(white, white);
