--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -68,7 +68,7 @@ img {
 }
 
 .grid {
-    margin-top: 1.5%;
+    /* margin-top: 8px; */
     font-size: 3rem;
     z-index: -1;
 }
@@ -92,7 +92,7 @@ img {
 
 .img-caption {
     float: left;
-    margin: 5px 5px 0px 0px;
+    margin: 5px 5px 0px 5px;
     width: 2.5em;
 }
 
