--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,6 @@ h6 {
 }
 
 .h1 {
-    font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
 
@@ -80,7 +79,6 @@ p+p {
 }
 
 a {
-    color: black;
     text-decoration: none;
     transition: .2s all ease;
 }
@@ -115,10 +113,11 @@ a:active {
     position: fixed;
     z-index: 100;
     height: 60px;
+    /* height: 195vh; */
     /* offset */
     top: 0;
     background-image: linear-gradient(white, transparent);
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
     margin-top: 0;
     transition: .2s all ease;
 }
@@ -150,6 +149,7 @@ a:active {
 .menu a {
     text-align: right;
     color: black;
+    font-size: 0.8em;
     margin: 0 8px;
 }
 
@@ -193,7 +193,7 @@ a:active {
     display: block;
     width: 100%;
     /* background: #fff; */
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
     z-index: 10;
 }
 
@@ -261,6 +261,7 @@ a:active {
 
 .ham-icon {
     height: 22px;
+    /* height: 100vh; */
     position: relative;
     margin-left: 20px;
     margin-top: 0;
@@ -292,6 +293,19 @@ a:active {
 
 .cd-top--fade-out {
     opacity: .5;
+}
+
+a.button {
+    position: fixed;
+    bottom: 8px;
+    left: 8px;
+    padding: 0.35em;
+    margin: 0.6em 0 0 0.05em;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background-color: black;
+    font-weight: 900;
 }
 
 
@@ -350,7 +364,7 @@ blockquote p {
 }
 
 #captions h1 {
-    margin-top: 10em;
+    margin-top: 8em;
 }
 
 
@@ -396,6 +410,7 @@ blockquote p {
     }
     .ham-icon.open {
         background-image: linear-gradient(white, white);
+        /* height: 600px; */
     }
     .ham-icon.open+.mobile-nav {
         padding: 16px 0 12px;
