--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,7 +300,7 @@ a.button {
     bottom: 8px;
     left: 8px;
     padding: 0.35em;
-    margin: 0.6em 0 0 0.05em;
+    margin: 0;
     border: none;
     cursor: pointer;
     color: white;
